nginx/pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  volumes:
    - name: monstorage
      persistentVolumeClaim:
        claimName: monpvc-nginx
  containers:
    - name: sftp
      image: atmoz/sftp
      ports:
        - containerPort: 22
      volumeMounts:
        - name: monstorage
          mountPath: /home/user/www-data
    - name: monnginx
      image: nginx
      ports:
        - containerPort: 80
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: monstorage
      resources:
        requests:
          memory: "1Gi"
          cpu: "0.5"
        limits:
          memory: "2Gi"
          cpu: "1"
